--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,600;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
-    <span><img id="logo" src="logo.png" alt="logo"></span>
+    <span><img id="logo" src="https://github.com/Anubhavgupta14/Class-Syllabus-and-TT/raw/master/logo.png" alt="logo"></span>
     <h1>MMMUT</h1>
     <h2>Information Technology</h2>
     <p>Website for Syllabus and Time Table of Information Technology Branch B.Tech 1st Semester.</p>
@@ -25,6 +25,6 @@
         <button onclick="document.location='Technical Writing.html'" class="syllabus">Technical Writing</button>
         <button onclick="document.location='Software Tool.html'" class="syllabus">Software Tool-1</button>
     </ul>
-    <img id="time" src="/timetable.png" alt="timetable">
+    <img id="time" src="https://github.com/Anubhavgupta14/Class-Syllabus-and-TT/raw/master/timetable.png" alt="timetable">
 </body>
 </html>
