--- a/Communication Skill.html
+++ b/Communication Skill.html
@@ -26,8 +26,8 @@
 </head>
 <body>
     <h1>Communication Skill Syllabus</h1>
-    <img src="/Communication Skill 1.jpeg" alt="Technical Writing">
-    <img src="/Communication Skill 2.jpeg" alt="Technical Writing">
+    <img src="https://github.com/Anubhavgupta14/Class-Syllabus-and-TT/raw/master/Communication%20Skill%201.jpeg" alt="Technical Writing">
+    <img src="https://github.com/Anubhavgupta14/Class-Syllabus-and-TT/raw/master/Communication%20Skill%202.jpeg" alt="Technical Writing">
     
 
 
