--- a/Electrical.html
+++ b/Electrical.html
@@ -27,7 +27,7 @@
 <body>
     <h1>Electrical Syllabus</h1>
     <p>Please Check your Download page. If file do not Download then reload the page.</p>
-    <iframe src="/Introduction to Electrical Engineering for ITCA.docx" width="100%" height="800px">
+    <iframe src="https://github.com/Anubhavgupta14/Class-Syllabus-and-TT/raw/master/Introduction%20to%20Electrical%20Engineering%20for%20ITCA.docx" width="100%" height="800px">
     </iframe>
     
 </body>
