--- a/Electronics.html
+++ b/Electronics.html
@@ -27,7 +27,7 @@
 <body>
     <h1>Electronics Syllabus</h1>
     <p>Please Check your Download page. If file do not Download then reload the page.</p>
-    <iframe src="/Basic Electronics Syllabus_CSE_IT_Chemical (1).docx" width="100%" height="800px">
+    <iframe src="https://github.com/Anubhavgupta14/Class-Syllabus-and-TT/raw/master/Basic%20Electronics%20Syllabus_CSE_IT_Chemical%20(1).docx" width="100%" height="800px">
     </iframe>
     
 </body>
