--- a/Fundamental of IT.html
+++ b/Fundamental of IT.html
@@ -26,6 +26,6 @@
 </head>
 <body>
     <h1>FIT Syllabus</h1>
-    <img src="/FIT.jpg" alt="Technical Writing">
+    <img src="https://github.com/Anubhavgupta14/Class-Syllabus-and-TT/raw/master/FIT.jpg" alt="Technical Writing">
 </body>
 </html>
