--- a/Software Tool.html
+++ b/Software Tool.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <h1>SoftWare Tool Syllabus</h1>
-    <img src="/software tool.jpg" alt="Software Tool">
+    <img src="https://github.com/Anubhavgupta14/Class-Syllabus-and-TT/raw/master/software%20tool.jpg" alt="Software Tool">
     
 
 
