--- a/Technical Writing.html
+++ b/Technical Writing.html
@@ -26,8 +26,8 @@
 </head>
 <body>
     <h1>Technical Writing Syllabus</h1>
-    <img src="/Technical Writing 1.jpeg" alt="Technical Writing">
-    <img src="/Technical Writing 2.jpeg" alt="Technical Writing">
+    <img src="https://github.com/Anubhavgupta14/Class-Syllabus-and-TT/raw/master/Technical%20Writing%201.jpeg" alt="Technical Writing">
+    <img src="https://github.com/Anubhavgupta14/Class-Syllabus-and-TT/raw/master/Technical%20Writing%202.jpeg" alt="Technical Writing">
     
 
 
