--- a/mathematics.html
+++ b/mathematics.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <h1>Mathematics Syllabus</h1>
-    <iframe src="/Maths SEM -1 Syllabus.pdf" width="100%" height="800px">
+    <iframe src="https://github.com/Anubhavgupta14/Class-Syllabus-and-TT/raw/master/Maths%20SEM%20-1%20Syllabus.pdf" width="100%" height="800px">
     </iframe>
     
 </body>
